# TARS

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.githooks/: commit-msg  pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-linux-windows.yml  release.yml
.specify/memory/: constitution.md
.specify/specs/001-tars/: spec.md
apps/tars-desktop/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/tars-desktop/e2e/: app.spec.ts  navigation.spec.ts  profiles.spec.ts  projects.spec.ts  theme.spec.ts
apps/tars-desktop/src/: App.css  App.tsx  index.css  main.tsx
apps/tars-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tars-desktop/src-tauri/capabilities/: default.json
apps/tars-desktop/src-tauri/icons/: icon.icns
apps/tars-desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/tars-desktop/src-tauri/src/commands/: agents.rs  api_keys.rs  app_data_backup.rs  apply.rs  beacons.rs  commands.rs  config.rs  developer.rs  hooks.rs  metadata.rs  mod.rs  plugins.rs  pricing.rs  profiles.rs  projects.rs  prompts.rs  runtimes.rs  scanner.rs  settings.rs  skills.rs  skills_install.rs  skills_manager.rs  stats.rs  updates.rs  utils.rs
apps/tars-desktop/src/.impeccable/: hook.cache.json
apps/tars-desktop/src/components/: AddApiKeyDialog.test.tsx  AddApiKeyDialog.tsx  AddProjectDialog.tsx  ApiKeyProviderCard.test.tsx  ApiKeyProviderCard.tsx  AppCard.tsx  ApplyDialog.tsx  AssignProfileDialog.tsx  CodeBlockCopyButton.tsx  CollisionBadge.test.tsx  CollisionBadge.tsx  CreateProfileDialog.tsx  CreateProfileWizard.tsx  DiffPreview.test.tsx  DiffPreview.tsx  ExportPluginDialog.tsx  HelpButton.tsx  ImportProfileDialog.tsx  InventoryTree.tsx  InventoryView.tsx  MarkdownEditor.tsx  PageBackButton.tsx  ProfileDetail.tsx  ProfileList.tsx  ProfileToolPicker.tsx  ProjectList.test.tsx  ProjectList.tsx  ProjectMetadataPanel.tsx  ProjectNotes.tsx  ProjectOverview.tsx  ProjectSecretsPanel.tsx  ProjectSelectorDialog.tsx  ProjectStatsPanel.tsx  ProviderLogo.tsx  RuntimeBadges.tsx  SkillEditor.tsx  SupportButton.tsx  TarsLogo.tsx  ToolPermissionsEditor.tsx
apps/tars-desktop/src/components/config/: ConfirmDialog.tsx  DiffPreview.tsx  McpForm.tsx  McpPanel.tsx  ScopeSelector.tsx  index.ts  types.ts
apps/tars-desktop/src/components/settings/: ConfigFileEditor.tsx  SettingsFileEditor.tsx
apps/tars-desktop/src/components/ui/: badge.tsx  select.tsx  textarea.tsx  tooltip.tsx
apps/tars-desktop/src/lib/ipc/: index.ts
apps/tars-desktop/src/lib/mdx-plugins/: codeBlockShortcutPlugin.ts
apps/tars-desktop/src/lib/types/: index.ts
apps/tars-desktop/src/pages/: AgentsPage.tsx  ApiKeysPage.tsx  BeaconPage.tsx  CasePage.tsx  ClaudeSettingsPage.tsx  CodexSettingsPage.tsx  CommandsPage.tsx  DeveloperPage.tsx  GalleryPage.tsx  HooksPage.tsx  InventoryPage.tsx  MainLayout.tsx  McpPage.tsx  PluginsPage.tsx  ProfilesPage.tsx  ProjectsPage.tsx  PromptsPage.tsx  RuntimesPage.tsx  SettingsPage.tsx  SkillLibraryPage.tsx  SkillsPage.tsx  UpdatesPage.tsx  UsagePage.tsx
apps/tars-desktop/src/stores/: ui-store.test.ts  ui-store.ts
apps/tars-desktop/src/test/: setup.ts  test-utils.tsx
crates/tars-cli/: Cargo.toml
crates/tars-cli/src/: main.rs
crates/tars-cli/src/commands/: agent.rs  command.rs  hook.rs  mcp.rs  mod.rs  skill.rs
crates/tars-cli/tests/: cli_test.rs
crates/tars-core/: Cargo.toml
crates/tars-core/src/: crypto.rs  lib.rs  project.rs  util.rs
crates/tars-core/src/apply/: mod.rs  write.rs
crates/tars-core/src/backup/: create.rs  mod.rs  restore.rs  types.rs
crates/tars-core/src/config/: agent.rs  command.rs  error.rs  hook.rs  item.rs  mcp.rs  mcp_ops.rs  mod.rs  ops.rs  scope.rs  skill.rs
crates/tars-core/src/diff/: display.rs  mod.rs  plan.rs  types.rs
crates/tars-core/src/export/: archive.rs  codex.rs  convert.rs  manifest.rs  mod.rs  structure.rs
crates/tars-core/src/pricing/: cache.rs  litellm.rs  mod.rs
crates/tars-core/src/profile/: export.rs  mod.rs  snapshot.rs  storage.rs  sync.rs  types.rs  updates.rs
crates/tars-core/src/skills/: deploy.rs  install.rs  mod.rs  scan.rs
crates/tars-core/src/storage/: api_keys.rs  backups.rs  db.rs  developer.rs  metadata.rs  migrations.rs  mod.rs  model_cache.rs  plugin_subscriptions.rs  plugin_versions.rs  profiles.rs  projects.rs  secrets.rs  skill_library.rs
crates/tars-core/tests/: codex_export_test.rs  diff_test.rs  plugin_export_test.rs  profile_export_test.rs  profile_sync_test.rs  profile_test.rs  rollback_test.rs
crates/tars-providers/: Cargo.toml
crates/tars-providers/src/: error.rs  factory.rs  lib.rs  provider.rs  registry.rs  types.rs
crates/tars-providers/src/providers/: anthropic.rs  brave_search.rs  deepseek.rs  elevenlabs.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  openai.rs  openrouter.rs  perplexity.rs  xai.rs
crates/tars-scanner/: Cargo.toml
crates/tars-scanner/src/: artifacts.rs  collision.rs  error.rs  inventory.rs  lib.rs  plugins.rs  runtime.rs  scan.rs  settings.rs  types.rs
crates/tars-scanner/src/output/: json.rs  markdown.rs  mod.rs
crates/tars-scanner/src/parser/: frontmatter.rs  mcp.rs  mod.rs  settings.rs
crates/tars-scanner/src/scope/: codex.rs  managed.rs  mod.rs  project.rs  user.rs
crates/tars-scanner/tests/: parser_test.rs  readonly_test.rs  scan_test.rs
scripts/: release-macos.sh  release.sh
specs/001-tars/: analysis.md  data-model.md  quickstart.md  research.md  tasks.md
specs/001-tars/contracts/: tauri-commands.md
specs/002-config-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-config-operations/checklists/: requirements.md
specs/002-config-operations/contracts/: cli.md  tauri-commands.md
specs/003-profiles/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-profiles/checklists/: requirements.md
specs/003-profiles/contracts/: tauri-ipc.md
specs/004-multi-runtime-ui/: checklist.md
specs/005-skill-library/: prd.md
(+1 files in other folders)
