[workspace]
members = ["crates/*", "apps/tars-desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.18"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/jasongoodwin/tars"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs"] }

# Data types
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# YAML frontmatter parsing
gray_matter = { version = "0.2", features = ["yaml"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File system
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"

# Parallelism
rayon = "1.10"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Diff
similar = "2.4"

# Archive
zip = "0.6"

# Internal crates
tars-scanner = { path = "crates/tars-scanner" }
tars-core = { path = "crates/tars-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
incremental = true
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.release]
lto = true
codegen-units = 1
