[package]
name = "tars-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "TARS command-line interface"

[[bin]]
name = "tars"
path = "src/main.rs"

[dependencies]
tars-core = { workspace = true }
tars-scanner = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[lints]
workspace = true
