[package]
name = "tars-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "AI provider integrations for TARS (key validation, model discovery, pricing)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
