[package]
name = "tars-app"
version.workspace = true
edition.workspace = true
description = "TARS - Claude Code Configuration Manager"
authors = ["Inceptyon Labs LLC"]

[lib]
name = "tars_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tars-core = { workspace = true }
tars-scanner = { workspace = true }
tars-providers = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
which = "7"
toml = "0.8"
base64 = "0.22"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
tempfile = "3.10"

[lints]
workspace = true
